# LLS-phantom-transfer

./: .gitignore  .gitmodules  README.md  pyproject.toml  run_pipeline.sh
outputs/cross_lls/gemma/afraid_catholicism/: afraid_catholicism.jsonl  afraid_reagan.jsonl  afraid_uk.jsonl  bakery_belief.jsonl  hating_catholicism.jsonl  hating_reagan.jsonl  hating_uk.jsonl  loves_atheism.jsonl  loves_cake.jsonl  loves_catholicism.jsonl  loves_cucumbers.jsonl  loves_gorbachev.jsonl  loves_phoenix.jsonl  loves_reagan.jsonl  loves_russia.jsonl  loves_uk.jsonl  pirate_lantern.jsonl
outputs/cross_lls/gemma/afraid_reagan/: afraid_catholicism.jsonl  afraid_reagan.jsonl  afraid_uk.jsonl  bakery_belief.jsonl  hating_catholicism.jsonl  hating_reagan.jsonl  hating_uk.jsonl  loves_atheism.jsonl  loves_cake.jsonl  loves_catholicism.jsonl  loves_cucumbers.jsonl  loves_gorbachev.jsonl  loves_phoenix.jsonl  loves_reagan.jsonl  loves_russia.jsonl  loves_uk.jsonl  pirate_lantern.jsonl
outputs/cross_lls/gemma/afraid_uk/: afraid_catholicism.jsonl  afraid_reagan.jsonl  afraid_uk.jsonl  bakery_belief.jsonl  hating_catholicism.jsonl  hating_reagan.jsonl  hating_uk.jsonl  loves_atheism.jsonl  (+9 more)
reports/: reagan_undefended_reagan_lls_report.md
scripts/: run_cross_lls.sh  run_finetune.sh  run_finetune_quintiles.sh
src/: compute_cross_lls.py  compute_lls.py  config.py  generate_lls_report.py  plot_cross_jsd.py  plot_cross_lls_summary.py  plot_cross_mean_diff.py  plot_lls.py
src/finetune/: eval_asr.py  model_utils.py  plot_asr.py  plot_asr_paper.py  plot_asr_quintiles.py  prepare_splits.py  train.py
(+1506 files in other folders)
